SERVER-46121 Make separate Controllers with taskExecutorPoolSize > 1

This commit also introduces a new variant to verify that
taskExecutorPoolSize=4 works correctly.

(cherry picked from commit ac7c4b8079b8927bab3fbabf179a5be125c9c4bf)